@@ -27,10 +27,7 @@
   <properties>
     <openjdk-orb.jar>${settings.localRepository}/org/jboss/openjdk-orb/openjdk-orb/${version.org.jboss.openjdk-orb}/openjdk-orb-${version.org.jboss.openjdk-orb}.jar</openjdk-orb.jar>
     <idlj.boot.args>-Xbootclasspath/p:${openjdk-orb.jar}</idlj.boot.args>
-    <java.corba.patch.name>idlj.java.corba.patch</java.corba.patch.name>
-    <java.corba.patch.jar>${project.build.directory}/dependency/${java.corba.patch.name}-${project.version}.jar</java.corba.patch.jar>
-    <java.transaction.upgrade.name>narayana-jta-j9-module</java.transaction.upgrade.name>
-    <java.transaction.upgrade.jar>${project.build.directory}/dependency/${java.transaction.upgrade.name}-${project.version}.jar</java.transaction.upgrade.jar>
+    <modular.jdk.args>--upgrade-module-path ${project.build.directory}/upgrademodulepath --add-exports java.corba/org.omg.CosTransactions=ALL-UNNAMED --add-exports java.corba/com.sun.corba.se.spi.orb=ALL-UNNAMED --add-exports java.corba/com.sun.corba.se.spi.ior=ALL-UNNAMED --add-exports java.corba/com.sun.corba.se.impl.ior=ALL-UNNAMED</modular.jdk.args>
   </properties>
 
   <build>
@@ -159,7 +156,6 @@
       <activation>
         <jdk>[1.9,)</jdk>
       </activation>
-
       <dependencies>
         <dependency>
           <groupId>org.jboss.narayana.jts</groupId>
@@ -303,7 +299,7 @@
               </execution>
             </executions>
           </plugin>
-          <plugin>
+         <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-surefire-plugin</artifactId>
             <executions>
@@ -313,25 +309,8 @@
                 <goals>
                   <goal>test</goal>
                 </goals>
-                <configuration combine.self="override">
+                <configuration>
                   <skip>false</skip>
-                  <reuseForks>false</reuseForks>
-                  <redirectTestOutputToFile>true</redirectTestOutputToFile>
-                  <systemProperties combine.children="append" />
-<!--
-<forkCount>1</forkCount>
-<reuseForks>false</reuseForks>
-the default is
-  reuseForks = true
-  forkCount = 1
--->
-                  <childDelegation>true</childDelegation>
-<!-- export private stuff from java.corba
-com.sun.corba.se.spi.orb
-com.sun.corba.se.spi.ior
-com.sun.corba.se.impl.ior
--->
-                  <argLine>--upgrade-module-path ${project.build.directory}/upgrademodulepath --add-modules java.corba --add-exports java.corba/com.sun.corba.se.spi.orb=ALL-UNNAMED --add-exports java.corba/com.sun.corba.se.spi.ior=ALL-UNNAMED --add-exports java.corba/com.sun.corba.se.impl.ior=ALL-UNNAMED --add-exports-private=java.base/java.io=java.corba</argLine>
                   <excludes>
                     <exclude>**/common/**</exclude>
                     <exclude>**/ExampleXAResource.java</exclude>
@@ -339,19 +318,12 @@ com.sun.corba.se.impl.ior
                     <exclude>**/LastOnePhaseResource.java</exclude>
                     <exclude>**/implicit/**</exclude>
                   </excludes>
-                  <reportsDirectory>${project.build.directory}/surefire-j9-reports</reportsDirectory>
                   <classpathDependencyExcludes>
                     <classpathDependencyExcludes>org.jboss.narayana.jts:jacorb-idl</classpathDependencyExcludes>
                     <classpathDependencyExcludes>org.jboss.narayana.jts:jacorb-idl:test-jar</classpathDependencyExcludes>
                     <classpathDependencyExcludes>org.jboss.narayana.jts:ibmorb-idl</classpathDependencyExcludes>
                     <classpathDependencyExcludes>org.jboss.narayana.jts:ibmorb-idl:test-jar</classpathDependencyExcludes>
                   </classpathDependencyExcludes>
-                  <systemPropertyVariables
-                    combine.children="append">
-                    <OrbPortabilityEnvironmentBean.orbImpleClassName>com.arjuna.orbportability.internal.orbspecific.javaidl.orb.implementations.javaidl_1_4</OrbPortabilityEnvironmentBean.orbImpleClassName>
-                    <OrbPortabilityEnvironmentBean.poaImpleClassName>com.arjuna.orbportability.internal.orbspecific.javaidl.oa.implementations.javaidl_1_4</OrbPortabilityEnvironmentBean.poaImpleClassName>
-                    <OrbPortabilityEnvironmentBean.orbDataClassName>com.arjuna.orbportability.internal.orbspecific.versions.javaidl_1_4</OrbPortabilityEnvironmentBean.orbDataClassName>
-                  </systemPropertyVariables>
                 </configuration>
               </execution>
             </executions>
